--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "yipengliu.jpg"
-  name             : "Your Sidebar Name"
+  name             : "Yipeng Liu"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "University Of Electronic Science And Technology Of China"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yipengliu@uestc.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
