--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "教授/博导/国家级青年人才"
   location         : "四川省成都市高新西区西源大道2006号"
   employer         : "电子科技大学"
-  uri              : # URL
+  uri              : "URL"
   email            : "yipengliu@uestc.edu.cn" 
 
   # Academic websites
