--- a/_config.yml
+++ b/_config.yml
@@ -27,16 +27,16 @@ author:
   bio              : "教授/博导/国家级青年人才"
   location         : "四川省成都市高新西区西源大道2006号"
   employer         : "电子科技大学"
-  uri              : "URL"
+  uri              : # "URL"
   email            : "yipengliu@uestc.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
 
