--- a/_config.yml
+++ b/_config.yml
@@ -224,6 +224,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  researchfields:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -281,6 +284,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _researchfields
+  - scope:
+      path: ""
+      type: researchfields
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true    
 
 
 # Sass/SCSS
