--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Research Fields"
+  - title: "研究方向"
+    url: /researchfields/
+
+  - title: "科研经历"
     url: /cv/
-
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "Guide"
-    url: /markdown/
