--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,16 @@
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
 
+# plugins:
+#   - jekyll-polyglot
+
+# languages: ["en", "zh"]
+# default_lang: "en"
+# # exclude_from_localization: ["assets/css", "assets/img"]
+# parallel_localization: false
+# sass:
+#   sourcemap: never
+
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Yipeng Liu(刘翼鹏)"
@@ -14,7 +24,6 @@ name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : https://xzh777.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
